# Multi-Agent-Legal-GraphRAG

./: .env.example  .gitignore  API design.md  NEO4J migration guide.md  README.md  docker-compose.neo4j.yml  pyproject.toml  setup.md
artifacts/: article_candidates.jsonl  article_comparison_embeddings.parquet  behavior_embeddings.parquet  extracted_behaviors.jsonl  extracted_relations.jsonl  extraction_manifest.json  import_extracted_relations.cypher  llm_article_results.jsonl  llm_behavior_results.jsonl  migration_manifest.json  relationship.parquet
design-system/phap-dien-ai/: MASTER.md
design-system/phap-dien-ai/pages/: workbench.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: use-answer-stream.ts
frontend/src/lib/: answer-types.ts  chat-reducer.test.ts  chat-reducer.ts  sse-parser.test.ts  sse-parser.ts  storage.ts
scripts/: .env.example  build_flatten.py  docker-compose.migration.yml  embed_neo4j.py  extract_behaviors.py  extract_legal_relations.py  import_artifacts.py  import_neo4j.py  neo4j_client.py  prepare_migration_data.py  rebuild_neo4j.py  rel_normalizer.py  requirements-migration.txt
src/legal_graph/: __init__.py  main.py
src/legal_graph/agents/: __init__.py  prompts.py  state.py  workflow.py
src/legal_graph/application/: __init__.py  agent_models.py  models.py  ports.py  services.py
src/legal_graph/core/: __init__.py  (+3 more)
tests/: test_agents.py  test_answer_api.py  test_models.py  test_repository_mapping.py  test_services.py
(+19 files in other folders)
